Crud demande celebrite fini reste acceptation ou refus demande

--- a/app/Resources/AthUserBundle/views/layout.html.twig
+++ b/app/Resources/AthUserBundle/views/layout.html.twig
@@ -1,5 +1,6 @@
-{% extends '::base_no_connected.html.twig' %}
-
+{% extends is_granted('ROLE_USER') 
+    ? '::base.html.twig' 
+    : '::base_no_connected.html.twig' %}
 {% block title %}{% endblock %}
 
 {% block body %}
