Ajout referer lors de auth, et correction href dans les mails

--- a/app/Resources/views/Ath/Mail/mail_demande_celebrite.html.twig
+++ b/app/Resources/views/Ath/Mail/mail_demande_celebrite.html.twig
@@ -16,7 +16,8 @@
                     
                     <p> {{ message }} </p>
                     <br>
-                    <p> A bientôt, sur <a href="{{ path('ath_user_homepage') }}">Athleteec</a> </p>
+                    {% set url = "http://" ~ app.request.server.get('SERVER_NAME') ~ path ('admin_ath_main_demandecelebrite_list') %}
+                    <p> A bientôt, sur <a href="{{ url }}">Athleteec</a> </p>
                 </td>
             </tr>
             <tr>
