--- a/app/Resources/views/Ath/Mail/mail_validation_demande_celebrite.html.twig
+++ b/app/Resources/views/Ath/Mail/mail_validation_demande_celebrite.html.twig
@@ -14,7 +14,9 @@
                     <p> Bonjour {{ user }}, </p>
                     <p>Votre demande de célébrité a bien été accepté par l'équipe Athleteec.</p>                 
                     <br>
-                    <p> Mettez en valeur votre équipement sportif et votre profil <a href="{{ path('fos_user_profile_edit') }}">Athleteec</a> </p>
+                    {% set url = "http://" ~ app.request.server.get('SERVER_NAME') ~ path ('fos_user_profile_edit') %}
+
+                    <p> Mettez en valeur votre équipement sportif et votre profil <a href="{{ url }}">Athleteec</a> </p>
                 </td>
             </tr>
             <tr>
