--- a/app/Resources/views/Ath/Admin/Commun/list_date.html.twig
+++ b/app/Resources/views/Ath/Admin/Commun/list_date.html.twig
@@ -4,6 +4,6 @@
     {% if value is empty %}
         &nbsp;
     {% else %}
-        {{ value|date('d/m/Y h:i') }}
+        {{ value|date('d/m/Y H:i') }}
     {% endif %}
 {% endblock %}
