--- a/app/Resources/views/Ath/Admin/Commun/image.html.twig
+++ b/app/Resources/views/Ath/Admin/Commun/image.html.twig
@@ -1,5 +1,5 @@
 {% extends 'SonataAdminBundle:CRUD:base_list_field.html.twig' %}
 
 {% block field%}
-    <img src="/{{ object.webPath }}" alt="" height="40px"/>
+    <img src="/{{ object.webPath | apply_filter('produit_short') }}" alt="" />
 {% endblock %}
