--- a/app/Resources/views/Ath/Admin/User/list_action_password.html.twig
+++ b/app/Resources/views/Ath/Admin/User/list_action_password.html.twig
@@ -1,1 +1,3 @@
-    <a class="btn btn-sm btn-default" href="{{ admin.generateObjectUrl('password', object) }}">{{ 'user.button.changepassword'|trans({}, 'administration') }}</a>
+{% if is_granted('ROLE_ADMIN_USER_PASSWORD') %}
+	<a class="btn btn-sm btn-default" href="{{ admin.generateObjectUrl('password', object) }}">{{ 'user.button.changepassword'|trans({}, 'administration') }}</a>
+{% endif %}
