--- a/app/Resources/views/top_nav_admin.html.twig
+++ b/app/Resources/views/top_nav_admin.html.twig
@@ -5,6 +5,8 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
+    {% if is_granted("ROLE_ADMIN_TABORD") %}
+
     <div class="navbar-header">
       <div class="headerSite-left">
                 <ul class="headerSite-list">
@@ -20,6 +22,7 @@
                                     </a>
                                 </li>
                             </ul>
+
                         <ul class="sidebarSite-nav">
                             {% include 'Ath/Admin/sidebar.html.twig' %}
                         </ul>
@@ -32,7 +35,8 @@
                 </ul>
             </div>
     </div>
-
+    {% endif %}
+    
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       
