--- a/app/Resources/views/Ath/Form/ath_form_page_theme.html.twig
+++ b/app/Resources/views/Ath/Form/ath_form_page_theme.html.twig
@@ -2,7 +2,7 @@
 
 {% block form_row %}
 {% spaceless %}
-    <div class="space-vertical-input">
+    <div class="">
         {{ form_label(form) }}
         <div class="col-sm-9">
             {{ form_errors(form) }}
