--- a/app/Resources/views/Ath/Admin/Commun/collection_post_images.html.twig
+++ b/app/Resources/views/Ath/Admin/Commun/collection_post_images.html.twig
@@ -2,6 +2,6 @@
 
 {% block field%}
 	{% for image in object.getFilePosts() %}
-    	<img src="/{{ image.webPath }}" alt="" height="200px" width="200px" />
+    	<img src="{{ image.webPath }}" alt="" height="200px" width="200px" />
 	{% endfor %}
 {% endblock %}
