--- a/app/Resources/views/Ath/Admin/Commun/show_image.html.twig
+++ b/app/Resources/views/Ath/Admin/Commun/show_image.html.twig
@@ -1,5 +1,5 @@
 {% extends 'SonataAdminBundle:CRUD:base_list_field.html.twig' %}
 
 {% block field%}
-    <img src="/{{ object.webPath }}" alt="{{ object.photoOriginalName }}" height="200px" width="200px" />
+    <img src="{{ object.webPath }}" alt="{{ object.photoOriginalName }}" height="200px" width="200px" />
 {% endblock %}
