--- a/app/Resources/views/Ath/Main/Includes/user.html.twig
+++ b/app/Resources/views/Ath/Main/Includes/user.html.twig
@@ -1,8 +1,9 @@
-{% set filtre = 'user_short' %}
+{% set filtre = 'small' %}
 {% if img_filter is defined %}
     {% set filtre = img_filter %}
 {% endif %}
 
 <span class="avatar avatar-{{filtre}} {% if AvtrClass is not defined %}{% else %}{{AvtrClass}}{% endif %}">
-    <img class="img-rounded" src="{{ user.webPath | apply_filter(filtre) }}" alt="{{ user }}" title="{{ user }}" />
+    <img class="img-rounded" src="{{ user.webPath | imagine_filter(filtre) }}" alt="{{ user }}" title="{{ user }}" />
+    {# <img class="img-rounded" src="{{ user.webPath }}" alt="{{ user }}" title="{{ user }}" /> #}
 </span>
