--- a/web/sass/front/common.scss
+++ b/web/sass/front/common.scss
@@ -7,6 +7,7 @@
 @import "../../../bower_components/bootstrap-social/bootstrap-social.scss";
 @import "../../../bower_components/jquery-ui/themes/base/jquery-ui.css";
 @import "../../../bower_components/jquery-ui/themes/smoothness/jquery-ui.css";
+@import "../../../bower_components/bootstrap-select/sass/bootstrap-select.scss";
 
 // Base Theme
 @import "theme/animate";
