Fixtures sport and user add slug uniqid

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -43,7 +43,7 @@
                             },
                             success: function( data ) {
                                 // $("#atix_caissebundle_facture_filtre_fkSoc").removeClass("loadinggif-for-input");
-                                console.log(data);
+                                // console.log(data);
                                 // response( data.append(data.img) );
                                 response(data);
 
