--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -52,12 +52,14 @@
                     },
                     create: function () {
                         $(this).data('ui-autocomplete')._renderItem = function (ul, item) {
+                            var url = '{{ path("ath_user_show_profile", {"slug": "toto"}) }}';
+                            url = url.replace("toto", item.slug);
+
                             return $('<li>')
-                                .append('<a>' + item.img + ' ' + item.value + '<br>'+ '('+ item.ville+')'+ '</a>')
+                                .append('<a href='+url+'>' + item.img + ' ' + item.value + '<br>'+ '('+ item.ville+')'+ '</a>')
                                 .appendTo(ul);
                         };
-                    }
-                    
+                    }                    
                 });
             });
 
