--- a/web/sass/front/theme/style.scss
+++ b/web/sass/front/theme/style.scss
@@ -1725,14 +1725,14 @@ footer .footer_list li a:hover
 	padding-bottom: 200px;
 }
 .user_wrap{
-	position: relative;
-	top:-200px;
+	// position: relative;
+	// top:-200px;
 }
 .user_container{
 	width: 100%;
-	position: absolute;
-	top: 37px;
-	left: -15px;
+	// position: absolute;
+	// top: 37px;
+	// left: -15px;
 }
 .user_avatar img{
 	border-radius: 5px;
@@ -6783,8 +6783,8 @@ footer h2:before{
 	padding-bottom: 220px;
 }
 .Profile.transparentmenu_yes .user_wrap {
-	position: relative;
-	top: -245px;
+	// position: relative;
+	// top: -245px;
 }
 .modal {
 	display: none;
